--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "signUpTitle": "{nameOfTheApp} 회원가입 {when}",
+  "signUpTitle": "{nameOfTheApp} 회원가입",
   "signUpSubtitle": "Create a profile, follow other accounts, make your own videos, and more.",
   "emailPasswordButton": "Use email & password",
   "appleButton": "Continue with Apple",
